# pypuml

./: README.rst  pyproject.toml
pypuml/: __init__.py  app.py  entity.py  inspector.py  writer.py
tests/: test_pypuml.py
