[tool.poetry]
name = "pypuml"
version = "0.1.0"
description = "Python Class UML Generator"
authors = ["45deg"]

[tool.poetry.dependencies]
python = ">=3.6"
astroid = "^2.3.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"